# DWIO_backend

./: Astra1.yaml  Astra2.yaml  CMakeLists.txt  README.md  ReadMe.txt  option.yaml  sample_data.yaml
include/: AA.h  AndersonAcceleration.h  DWIO.h  Fusion.h  INS.h  ITMMeshingEngine_CPU.h  backend.h  data.h  data_loader.h  utility.hpp
include/fricp/: AndersonAcceleration.h  FRICP.h  ICP.h  Types.h
include/scancontext/: Scancontext.h
src/: DWIO.cpp  INS.cpp  ITMMeshingEngine_CPU.cpp  Scancontext.cpp  backend.cpp  data_loader.cpp  main.cpp  pose_estimation.cpp  surface_measurement.cpp
src/cuda/: ITMMeshingEngine_CUDA.cu  ITMSceneReconstructionEngine_CUDA.cu  ITMSwappingEngine_CUDA.cu  csm.cu  extract_pointcloud.cu  gauss_newton.cu  map_segmentation.cu  surface_measurement.cu  surface_prediction_phong_shading.cu
src/cuda/include/: ITMMeshingEngine_CUDA.h  ITMMeshingEngine_Shared.h  ITMSceneReconstructionEngineShared.h  ITMSceneReconstructionEngine_CUDA.h  ITMSwappingEngineShared.h  ITMSwappingEngine_CUDA.h  common.h
src/hash/: CUDADefines.h  ITMGlobalCache.h  ITMLocalVBA.h  ITMMesh.h  ITMRenderState_VH.h  ITMRepresentationAccess.h  ITMScene.h  ITMVoxelBlockHash.h  ITMVoxelTypes.h  LocalMap.h  MemoryBlock.h  Submap.h
